syntax = "proto3";
package ddeedsix.customchain.nameservice;

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "nameservice/params.proto";
import "nameservice/bind.proto";
// this line is used by starport scaffolding # 1

option go_package = "github.com/dDee-D-six/custom-chain/x/nameservice/types";

// Query defines the gRPC querier service.
service Query {
  // Parameters queries the parameters of the module.
  rpc Params(QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/dDee-D-six/custom-chain/nameservice/params";
  }
  // Queries a Bind by index.
	rpc Bind(QueryGetBindRequest) returns (QueryGetBindResponse) {
		option (google.api.http).get = "/dDee-D-six/custom-chain/nameservice/bind/{nameService}";
	}

	// Queries a list of Bind items.
	rpc BindAll(QueryAllBindRequest) returns (QueryAllBindResponse) {
		option (google.api.http).get = "/dDee-D-six/custom-chain/nameservice/bind";
	}

// this line is used by starport scaffolding # 2
}

// QueryParamsRequest is request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is response type for the Query/Params RPC method.
message QueryParamsResponse {
  // params holds all the parameters of this module.
  Params params = 1 [(gogoproto.nullable) = false];
}

message QueryGetBindRequest {
	  string nameService = 1;

}

message QueryGetBindResponse {
	Bind bind = 1 [(gogoproto.nullable) = false];
}

message QueryAllBindRequest {
	cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

message QueryAllBindResponse {
	repeated Bind bind = 1 [(gogoproto.nullable) = false];
	cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

// this line is used by starport scaffolding # 3
